@@ -97,6 +97,8 @@ my @functions =  qw(
       setbinop sumset setunion setintersect setminus setdelta toset
       setcontains setinsert
       is_subset is_sidon_set is_sumfree_set
+      set_is_disjoint set_is_equal set_is_proper_intersection
+      set_is_subset set_is_proper_subset set_is_superset set_is_proper_superset
       moebius mertens liouville sumliouville prime_omega prime_bigomega
       euler_phi jordan_totient exp_mangoldt sumtotient
       partitions bernfrac bernreal harmfrac harmreal
